/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/GUIForms/JPanel.java to edit this template
 */
package umariana.cupi2.esports.interfaz;

/**
 *
 * @author Usuario
 */
public class PanelNavBar extends javax.swing.JPanel {
    private final InterfazEsports ventana;


    /**
     * Creates new form PanelNavBar
     * @param ventana
     */
    public PanelNavBar(InterfazEsports ventana) {
    this.ventana = ventana;
    initComponents();
}
    
@Deprecated
   public PanelNavBar() {
        ventana = null;
     initComponents();
   }


    /**
     * This method is called from within the constructor to initialize the form.
     * WARNING: Do NOT modify this code. The content of this method is always
     * regenerated by the Form Editor.
     */
    @SuppressWarnings("unchecked")
    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
    private void initComponents() {

        background = new javax.swing.JPanel();
        tittle = new javax.swing.JLabel();
        registrarJugadorButton = new javax.swing.JButton();
        registrarPartidaButton = new javax.swing.JButton();
        consultarJugadoresButton = new javax.swing.JButton();

        background.setBackground(new java.awt.Color(51, 51, 51));
        background.setLayout(null);

        tittle.setFont(new java.awt.Font("VALORANT", 0, 36)); // NOI18N
        tittle.setForeground(new java.awt.Color(255, 255, 255));
        tittle.setText("eSports");
        background.add(tittle);
        tittle.setBounds(30, 30, 180, 40);

        registrarJugadorButton.setBackground(new java.awt.Color(72, 72, 72));
        registrarJugadorButton.setFont(new java.awt.Font("VALORANT", 0, 14)); // NOI18N
        registrarJugadorButton.setForeground(new java.awt.Color(255, 255, 255));
        registrarJugadorButton.setText("Registrar Jugadores");
        registrarJugadorButton.setBorder(null);
        registrarJugadorButton.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                registrarJugadorButtonActionPerformed(evt);
            }
        });
        background.add(registrarJugadorButton);
        registrarJugadorButton.setBounds(380, 30, 200, 30);

        registrarPartidaButton.setBackground(new java.awt.Color(72, 72, 72));
        registrarPartidaButton.setFont(new java.awt.Font("VALORANT", 0, 14)); // NOI18N
        registrarPartidaButton.setForeground(new java.awt.Color(255, 255, 255));
        registrarPartidaButton.setText("Registrar Partida");
        registrarPartidaButton.setBorder(null);
        registrarPartidaButton.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                registrarPartidaButtonActionPerformed(evt);
            }
        });
        background.add(registrarPartidaButton);
        registrarPartidaButton.setBounds(590, 30, 170, 30);

        consultarJugadoresButton.setBackground(new java.awt.Color(72, 72, 72));
        consultarJugadoresButton.setFont(new java.awt.Font("VALORANT", 0, 14)); // NOI18N
        consultarJugadoresButton.setForeground(new java.awt.Color(255, 255, 255));
        consultarJugadoresButton.setText("Consultar Jugadores");
        consultarJugadoresButton.setBorder(null);
        consultarJugadoresButton.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                consultarJugadoresButtonActionPerformed(evt);
            }
        });
        background.add(consultarJugadoresButton);
        consultarJugadoresButton.setBounds(770, 30, 180, 30);

        javax.swing.GroupLayout layout = new javax.swing.GroupLayout(this);
        this.setLayout(layout);
        layout.setHorizontalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(layout.createSequentialGroup()
                .addComponent(background, javax.swing.GroupLayout.PREFERRED_SIZE, 984, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addGap(0, 0, Short.MAX_VALUE))
        );
        layout.setVerticalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(layout.createSequentialGroup()
                .addComponent(background, javax.swing.GroupLayout.PREFERRED_SIZE, 81, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addGap(0, 0, Short.MAX_VALUE))
        );
    }// </editor-fold>//GEN-END:initComponents

    private void registrarPartidaButtonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_registrarPartidaButtonActionPerformed
        ventana.mostrarPanel("registro");
    }//GEN-LAST:event_registrarPartidaButtonActionPerformed

    private void consultarJugadoresButtonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_consultarJugadoresButtonActionPerformed
        ventana.mostrarPanel("consulta");
    }//GEN-LAST:event_consultarJugadoresButtonActionPerformed

    private void registrarJugadorButtonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_registrarJugadorButtonActionPerformed
         ventana.mostrarPanel("jugadores");
    }//GEN-LAST:event_registrarJugadorButtonActionPerformed


    // Variables declaration - do not modify//GEN-BEGIN:variables
    private javax.swing.JPanel background;
    private javax.swing.JButton consultarJugadoresButton;
    private javax.swing.JButton registrarJugadorButton;
    private javax.swing.JButton registrarPartidaButton;
    private javax.swing.JLabel tittle;
    // End of variables declaration//GEN-END:variables
}
