@startuml
title Diagrama de clases de la Interfaz Esports
left to right direction

'Estilos personalizados solo para clases que empiecen con Interfaz o Panel
skinparam class {
    BackgroundColor White
    BorderColor #999999
    FontColor Black
}

' ==== Definición de clases ====

class InterfazEsports <<JFrame>> {
    - DATA_FOLDER_PATH : String
    - esports : Esports
    - director : DirectorEquipo
    - panelContenedor : JPanel
    - cardLayout : CardLayout
    - panelNavBar : PanelNavBar
    - panelRegistroPartidas : PanelRegistroPartidas
    - panelRegistroJugadores : PanelRegistroJugadores
    - panelConsultarJugadores : PanelConsultarJugadores
    --
    + InterfazEsports()
    + mostrarPanel(nombre : String) : void
    + registrarJugador(nombre : String, nickname : String, correo : String, nombreEquipo : String, kills : int, deaths : int, assists : int) : void
    + registrarPartida() : void
    + irARegistroJugadores() : void
    + irARegistroPartida() : void
    + irAConsultaJugadores() : void
    + main(args : String[]) : void
}

class PanelNavBar <<JPanel>> {
    - ventana : InterfazEsports
    --
    + PanelNavBar(ventana : InterfazEsports)
    + PanelNavBar()
}

class PanelRegistroJugadores <<JPanel>> {
    - ventana : InterfazEsports
    - esports : Esports
    --
    + PanelRegistroJugadores(ventana : InterfazEsports, modelo : Esports)
}

class PanelRegistroPartidas <<JPanel>> {
    - ventana : InterfazEsports
    - esports : Esports
    --
    + PanelRegistroPartidas(ventana : InterfazEsports, modelo : Esports)
    + getEquipo1() : String
    + getFecha1() : String
    + getRival1() : String
    + getMarcador1() : String
    + getKills1() : String
    + getDeaths1() : String
    + getAssists1() : String
    + getEquipo2() : String
    + getFecha2() : String
    + getRival2() : String
    + getMarcador2() : String
    + getKills2() : String
    + getDeaths2() : String
    + getAssists2() : String
    + limpiarCampos() : void
}

class PanelConsultarJugadores <<JPanel>> {
    - ventana : InterfazEsports
    - esports : Esports
    --
    + PanelConsultarJugadores(ventana : InterfazEsports, modelo : Esports)
}

class Esports {
    - equipos : ArrayList<Equipo>
    --
    + Esports()
    + addEquipo(equipo : Equipo) : void
    + getEquipos() : ArrayList<Equipo>
    + darEquipoPorNombre(nombre : String) : Equipo
}

' ==== Relaciones ====
InterfazEsports "1" --> "1" Esports : esports
InterfazEsports "1" --> "1" DirectorEquipo : director
InterfazEsports "1" --> "1" JPanel : panelContenedor
InterfazEsports "1" --> "1" CardLayout : cardLayout
InterfazEsports "1" --> "1" PanelNavBar : panelNavBar
InterfazEsports "1" --> "1" PanelRegistroPartidas : panelRegistroPartidas
InterfazEsports "1" --> "1" PanelRegistroJugadores : panelRegistroJugadores
InterfazEsports "1" --> "1" PanelConsultarJugadores : panelConsultarJugadores

PanelNavBar --> "1" InterfazEsports : ventana
PanelRegistroJugadores --> "1" InterfazEsports : ventana
PanelRegistroJugadores --> "1" Esports : esports
PanelRegistroPartidas --> "1" InterfazEsports : ventana
PanelRegistroPartidas --> "1" Esports : esports
PanelConsultarJugadores --> "1" InterfazEsports : ventana
PanelConsultarJugadores --> "1" Esports : esports

@enduml
